--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main"><img src="images/pic1.jpg" alt="" /></span>
+								<p>I am postdoctoral fellow of Computational Pathology Program at The University of Texas MD Anderson Cancer Center. I received my doctorate in Computational Statisitics from the joint doctoral program at San Diego State University and Claremont Garaduate University where my dissertation work focused on designing and implementation of multiple Random Forest-based algorithms to solve computational challanges in autism research. I received my second Masters degree in biostatistics from San Diego State University. My first Masters is in Mathematical statistics from Shiraz University in Iran. My research interests include Machine Learning and Data Mining, and analyzing the behavior of high-dimensional learning algorithms. I am currently focused on the systems biology of gliomas and spatial stochastic processes and its aplication to multiplexed immunofluorescence images.<p>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
+						<!-- Research -->
+							<article id="Research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
