a little about me
fixing intro?

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">A little about me</h2>
 								<span class="image main"><img src="images/pic1.jpg" alt="" /></span>
 								<p>I am a postdoctoral fellow of the Computational Pathology Program at The University of Texas MD Anderson Cancer Center. I received my doctorate in Computational Statistics from the joint doctoral program at San Diego State University and Claremont Graduate University. My dissertation work focused on designing and implementing multiple Random Forest-based algorithms to solve computational challenges in autism research. I received my second Masters degree in biostatistics from San Diego State University. My first Masters is in Mathematical statistics from Shiraz University in Iran. My research interests include Machine Learning and Data Mining, and analyzing the behavior of high-dimensional learning algorithms. My research interest currently focused on the systems biology of gliomas and spatial stochastic processes and its aplication to multiplexed immunofluorescence images.<p>
 						
