--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
 							<article id="Research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
-							</article>
+								<u>Matching Methods for Observational Data With Small Group Sizes</u>
+								<p>Research question: Which matching algorithm should we use to obtain desired balance between two groups while maintaining enough subjects in each group?<p>
+<p>In the observational studies, matching is used to optimize balance and sample size. Although many matching algorithms can achieve this goal, in some fields, matching could face its own challenges. Datasets with small sample sizes and limited numbers of control reservoir are prone to this issue. This problem may arise in many ongoing research studies, including those in autism spectrum disorders (ASDs). In this project, we are interested in eliminating the effect of undesirable variables using two types of algorithms, 1:k nearest matching and full matching. </p>
+						<p><u>IterMatch, Statistical R Package for Multivariate Matching Problems<u>	
+						</article>
 
 						<!-- About -->
 							<article id="about">
