research update test 5
test 5

--- a/index.html
+++ b/index.html
@@ -56,9 +56,24 @@
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<u>Matching Methods for Observational Data With Small Group Sizes</u>
-								<p>Research question: Which matching algorithm should we use to obtain desired balance between two groups while maintaining enough subjects in each group?<p>
-<p>In the observational studies, matching is used to optimize balance and sample size. Although many matching algorithms can achieve this goal, in some fields, matching could face its own challenges. Datasets with small sample sizes and limited numbers of control reservoir are prone to this issue. This problem may arise in many ongoing research studies, including those in autism spectrum disorders (ASDs). In this project, we are interested in eliminating the effect of undesirable variables using two types of algorithms, 1:k nearest matching and full matching. </p>
-						<p><u>IterMatch, Statistical R Package for Multivariate Matching Problems<u>	
+								<p>Research question: Which matching algorithm should we use to obtain desired balance between two groups
+									while maintaining enough subjects in each group?
+                                                                        In the observational studies, matching is used to optimize balance and sample size. Although many matching
+								        algorithms can achieve this goal, in some fields, matching could face its own challenges. Datasets with
+									small sample sizes and limited numbers of control reservoir are prone to this issue. This problem may
+									arise in many ongoing research studies, including those in autism spectrum disorders (ASDs). In this
+									project, we are interested in eliminating the effect of undesirable variables using two types of
+									algorithms, 1:k nearest matching and full matching. </p>
+								
+						               <u>"IterMatch", Statistical R Package for Multivariate Matching Problems<u>
+							       <p>Research question: How to optimally match two groups of participants on multiple variables with missing data?
+                                                                       To decipher the imaging data from functional connectivity MRI (fcMRI) scans, one must first eliminate the 
+								       undesirable effects of critical background variables before any pattern recognition procedures can be performed.
+								       In an observational study, treated subjects are often matched to control subjects with similar values of
+								       covariates in an effort to form treatment groups that are comparable. Currently, most of the observational
+								       studies match their subjects in a difficult and time consuming manner. In this study, a statistical R
+								       package is developed and implemented to obtain optimized balance on multiple variables. This package could
+								       be used for both small and large size sample size observational cohorts.<p>
 						</article>
 
 						<!-- About -->
