--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									project, we are interested in eliminating the effect of undesirable variables using two types of
 									algorithms, 1:k nearest matching and full matching. </p>
 								
-						               <u>"IterMatch", Statistical R Package for Multivariate Matching Problems<u>
+						               <p><u>"IterMatch", Statistical R Package for Multivariate Matching Problems<u><p>
 							       <p>Research question: How to optimally match two groups of participants on multiple variables with missing data?
                                                                        To decipher the imaging data from functional connectivity MRI (fcMRI) scans, one must first eliminate the 
 								       undesirable effects of critical background variables before any pattern recognition procedures can be performed.
