--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="#intro">Introduction</a></li>
 								<li><a href="#Research">Reseach</a></li>
 								<li><a href="#CV">CV</a></li>
 								<li><a href="#Publication">Publication</a></li>
