--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1> AFROOZ JAHEDI</h1>
-								<p>Postdoctoral Fellow </p>
-								</p> UT MD ANDERSON CANCER CENTER</p>
+								<p>Computational Pathology Postdoctoral Fellow </p>
+								</p> University of Texas MD Anderson Cancer Center</p>
 							</div>
 						</div>
 						<nav>
