--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Introduction</a></li>
-								<li><a href="#Research">Research</a></li>
+								<li><a href="#Research">Research Projects</a></li>
 								<li><a href="#CV">CV</a></li>
 								<li><a href="#Publication">Publication</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -48,11 +48,16 @@
 								<h2 class="major">A little about me</h2>
 								<span class="image main"><img src="images/pic1.jpg" alt="" /></span>
 								<p>I am a computational pathology postdoctoral fellow at The University of Texas MD Anderson Cancer Center. I received my doctorate
-								in Computational Statistics from the joint doctoral program at San Diego State University and Claremont Graduate University. My dissertation work focused on designing and implementing multiple Random Forest-based algorithms to solve computational challenges in autism research. I also received my first Masters degree in Mathematical staitistics from Shiraz university and second Masters in biostatistics from San Diego State University. My first Masters was in Mathematical statistics from Shiraz University in Iran. My research interests include Machine Learning and Data Mining, and analyzing the behavior of high-dimensional learning algorithms. My research interest currently focused on the systems biology of gliomas and spatial stochastic processes and its aplication to multiplexed immunofluorescence images.<p>
+								in Computational Statistics from the joint doctoral program at San Diego State University and Claremont Graduate University.
+								My dissertation work focused on designing and implementing multiple Random Forest-based algorithms to solve computational challenges
+								in autism research. I also received my first Masters degree in Mathematical Staitistics from Shiraz University in Iran and second Masters in
+								Biostatistics from San Diego State University. My
+								research interests include Machine Learning, Data Mining, and Spatial Analysis. Currently I am working on developing spatial pipeline to analyze CODEX images on Gliblastoma.
+								<p>
 						
 						</article>
 
-						<!-- Research -->
+						<!-- Research Projects-->
 							<article id="Research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
