--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Introduction</a></li>
-								<li><a href="#Research">Research Projects</a></li>
+								<li><a href="#Research"> Projects</a></li>
 								<li><a href="#CV">CV</a></li>
 								<li><a href="#Publication">Publication</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -59,7 +59,7 @@
 
 						<!-- Research Projects-->
 							<article id="Research">
-								<h2 class="major">Research</h2>
+								<h2 class="major">Research Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<u>Matching Methods for Observational Data With Small Group Sizes</u>
 								<p>Research question: Which matching algorithm should we use to obtain desired balance between two groups
