--- a/index.html
+++ b/index.html
@@ -62,17 +62,18 @@
 								<h2 class="major">Research Projects</h2>
 								<span class="image main"><img src="images/IterMatch.jpg" alt="" /></span>
 								<u>Matching Methods for Observational Data With Small Group Sizes</u>
-								<p><strong>Research question: Which matching algorithm should we use to obtain desired balance between two groups
+								<p><strong>Research Question: Which matching algorithm should we use to obtain desired balance between two groups
 									while maintaining enough subjects in each group?</strong>
-                                                                        In the observational studies, matching is used to optimize balance and sample size. Although many matching
-								        algorithms can achieve this goal, in some fields, matching could face its own challenges. Datasets with
+                                    In the observational studies, matching is used to optimize balance and sample size. Although many matching
+								    algorithms can achieve this goal, in some fields, matching could face its own challenges. Datasets with
 									small sample sizes and limited numbers of control reservoir are prone to this issue. This problem may
 									arise in many ongoing research studies, including those in autism spectrum disorders (ASDs). In this
 									project, we are interested in eliminating the effect of undesirable variables using two types of
 									algorithms, 1:k nearest matching and full matching. </p>
 								
-						               <p><u>"IterMatch", Statistical R Package for Multivariate Matching Problems<u><p>
-							       <p>Research question: How to optimally match two groups of participants on multiple variables with missing data?
+						        <span class="image main"><img src="images/IterMatch.jpg" alt="" /></span>
+								<p><u>"IterMatch", Statistical R Package for Multivariate Matching Problems<u><p>
+							       <p><strong>Research Question: How to optimally match two groups of participants on multiple variables with missing data?</strong>
                                                                        To decipher the imaging data from functional connectivity MRI (fcMRI) scans, one must first eliminate the 
 								       undesirable effects of critical background variables before any pattern recognition procedures can be performed.
 								       In an observational study, treated subjects are often matched to control subjects with similar values of
