--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									project, we are interested in eliminating the effect of undesirable variables using two types of
 									algorithms, 1:k nearest matching and full matching. </p>
 								
-						        <span class="image main"><img src="images/IterMatch.jpg" alt="" /></span>
+						        <span class="image main"><img src="images/Algorithm1.jpg" alt="" /></span>
 								<p><u>"IterMatch", Statistical R Package for Multivariate Matching Problems<u><p>
 							       <p><strong>Research Question: How to optimally match two groups of participants on multiple variables with missing data?</strong>
                                                                        To decipher the imaging data from functional connectivity MRI (fcMRI) scans, one must first eliminate the 
