--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 								<h2 class="major">Research Projects</h2>
 								
 								<u>Matching Methods for Observational Data With Small Group Sizes</u>
-								<p><strong>Research Question: Which matching algorithm should we use to obtain desired balance between two groups
-									while maintaining enough subjects in each group?</strong>
+								<p><b>Research Question: Which matching algorithm should we use to obtain desired balance between two groups
+									while maintaining enough subjects in each group?</b>
                                     In the observational studies, matching is used to optimize balance and sample size. Although many matching
 								    algorithms can achieve this goal, in some fields, matching could face its own challenges. Datasets with
 									small sample sizes and limited numbers of control reservoir are prone to this issue. This problem may
