--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 									algorithms, 1:k nearest matching and full matching. </p>
 									<span class="image main"><img src="images/IterMatch.jpg" alt="" /></span>
 								
-						        <p><u>"IterMatch", Statistical R Package for Multivariate Matching Problems<u><p>
+						        <u>"IterMatch", Statistical R Package for Multivariate Matching Problems<u>
 							    <p><b>Research Question: How to optimally match two groups of participants on multiple variables with missing data?</b>
-                                    To decipher the imaging data from functional connectivity MRI (fcMRI) scans, one must first eliminate the 
+                                      To decipher the imaging data from functional connectivity MRI (fcMRI) scans, one must first eliminate the 
 								       undesirable effects of critical background variables before any pattern recognition procedures can be performed.
 								       In an observational study, treated subjects are often matched to control subjects with similar values of
 								       covariates in an effort to form treatment groups that are comparable. Currently, most of the observational
