--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 								in Computational Statistics from the joint doctoral program at San Diego State University and Claremont Graduate University.
 								My dissertation work focused on designing and implementing multiple Random Forest-based algorithms to solve computational challenges
 								in autism research. I also received my first Masters degree in Mathematical Staitistics from Shiraz University in Iran and second Masters in
-								Biostatistics from San Diego State University. My
-								research interests include Machine Learning, Data Mining, and Spatial Analysis. Currently I am working on developing spatial pipeline to analyze CODEX images on Gliblastoma.
+								Biostatistics from San Diego State University. My research interests include Machine Learning, Data Mining, and Spatial Analysis. Currently I
+								am working on developing spatial pipeline to analyze CODEX images on Gliblastoma.
 								<p>
 						
 						</article>
@@ -71,6 +71,7 @@
 									project, we are interested in eliminating the effect of undesirable variables using two types of
 									algorithms, 1:k nearest matching and full matching. </p>
 									<span class="image main"><img src="images/IterMatch.jpg" alt="" /></span>
+									</article>
 								
 						        <u>"IterMatch", Statistical R Package for Multivariate Matching Problems<u>
 							    <p><b>Research Question: How to optimally match two groups of participants on multiple variables with missing data?</b>
