--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									<span class="image main"><img src="images/IterMatch.jpg" alt="" /></span>
 									
 								
-						        <u>"IterMatch", Statistical R Package for Multivariate Matching Problems<u>
+						        <u>"IterMatch", Statistical R Package for Multivariate Matching Problems</u>
 							    <p><b>Research Question: How to optimally match two groups of participants on multiple variables with missing data?</b>
                                       To decipher the imaging data from functional connectivity MRI (fcMRI) scans, one must first eliminate the 
 								       undesirable effects of critical background variables before any pattern recognition procedures can be performed.
