--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 									arise in many ongoing research studies, including those in autism spectrum disorders (ASDs). In this
 									project, we are interested in eliminating the effect of undesirable variables using two types of
 									algorithms, 1:k nearest matching and full matching. </p>
-									<span class="image main"><img src="images/IterMatch.jpg" alt="" /></span>
+									<span class="image main"><img src="images/Matching.jpg" alt="" /></span>
 									
 								
 						        <u>"IterMatch", Statistical R Package for Multivariate Matching Problems</u>
