--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
 							
 						</article>
 
+                        <!-- Intro -->
+							<article id="CV">
+								<span class="CV main"><img src="CV/CV-Afrooz Jahedi 10-20" alt="" /></span>
+								<p><a href="CV/CV-Afrooz Jahedi 10-20.pdf">resume
+								<p>
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
