--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 							
 						</article>
 
-                        <!-- Intro -->
+                        <!-- CV -->
 							<article id="CV">
-								<span class="CV main"><img src="CV/CV-Afrooz Jahedi 10-20" alt="" /></span>
+								<span class="major main"><img src="CV/CV-Afrooz Jahedi 10-20" alt="" /></span>
 								<p><a href="CV/CV-Afrooz Jahedi 10-20.pdf">resume
 								<p>
 						<!-- About -->
