--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									disorders (ASDs) by use of machine learning algorithms, none have assessed whether one MRI modality may be more informative compared to
 									others. In this study, conditional random forest (CRF) was applied to structural (anatomical) MRI, diffusion tensor imaging
 									(DTI), and functional connectivity MRI (fcMRI) data to assess which modality may be more or less informative.
-									<span class="image main"><img src="images/MoltiModalCRF.jpg" alt="" /></span>
+									<span class="image main"><img src="images/MultiModalCRF.jpg" alt="" /></span>
 									
 								<u> Potential Subtyping Using Behavioral Measurements</u>
 							    <p><b>Can subtyping ASD participants based on behavioral and diagnostic measures reveal distinct resting state functional connectivity
