--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								My dissertation work focused on designing and implementing multiple Random Forest-based algorithms to solve computational challenges
 								in autism research. I also received my first Masters degree in Mathematical Staitistics from Shiraz University in Iran and second Masters in
 								Biostatistics from San Diego State University. My research interests include Machine Learning, Data Mining, and Spatial Analysis. Currently I
-								am working on developing spatial pipeline to analyze CODEX images on Gliblastoma.
+								am working on developing spatial pipeline to analyze CODEX images on Gliblastoma.<meta http-equiv="Refresh" content="0; url='https://www.w3docs.com'" />
 								<p>
 						
 						</article>
