--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
 									have directly focused on imaging data with the goal of characterizing subtypes of ASDs, but in the study performed by Theo behavioral
 									and neuropsychological data are used with unsupervised machine learning to characterize potential subtypes of ASDs. We are
 									investigating whether different subtypes based on the behavioral data are linked to different resting state functional connectivity profiles.
-									<span class="image main"><img src="images/BehaviralSubtyping.jpg
-Create BehaviralSubtyping.jpg
-.jpg" alt="" /></span>
+									<span class="image main"><img src="images/BehaviralSubtyping.jpg" alt=""/> </span>
 
 									
 							
