--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 								
 						<!-- About -->
 							<article id="Publication">
-								<h2 class="major">About</h2>
-								<p> <a href="https://scholar.google.com/citations?user=vPAHC_wAAAAJ&hl=en">List of publications</a>. 
+								<h2 class="major">Publication</h2>
+								<p> <a href="https://scholar.google.com/citations?user=vPAHC_wAAAAJ&hl=en"></a>. 
 							
 
 						<!-- Contact -->
