--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 								<p>I am a computational pathology postdoctoral fellow at The University of Texas MD Anderson Cancer Center. I received my doctorate
 								in Computational Statistics from the joint doctoral program at San Diego State University and Claremont Graduate University.
 								My dissertation work focused on designing and implementing multiple Random Forest-based algorithms to solve computational challenges
-								in autism research. I also received my first Masters degree in Mathematical Staitistics from Shiraz University in Iran and second Masters in
-								Biostatistics from San Diego State University. My research interests include Machine Learning, Data Mining, and Spatial Analysis. Currently I
-								am working on developing spatial pipeline to analyze CODEX images on Gliblastoma.
+								in autism research. I also received my first Masters degree in Mathematical Statistics from Shiraz University in Iran and my second Masters in
+								Biostatistics from San Diego State University. My research interests include Machine Learning, Data Mining, and Spatial Analysis. Currently, I
+								am working on developing a spatial pipeline to analyze CODEX images on Glioblastoma.
 								<p>
 						
 						</article>
