--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						<!-- About -->
 							<article id="Publication">
 								<h2 class="major">Publication</h2>
-								<p> <a href="https://scholar.google.com/citations?user=vPAHC_wAAAAJ&hl=en"></a>. 
+								<p> <a href="https://scholar.google.com/citations?user=vPAHC_wAAAAJ&hl=en"></a>. <p>
 							
 
 						<!-- Contact -->
