--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">A little about me</h2>
-								<span class="image main"><img src="images/pic1.jpg" alt="" /></span>
+								<span class="image main"><img src="images/backgroundMain.jpg" alt="" /></span>
 								<p>I am a computational pathology postdoctoral fellow at The University of Texas MD Anderson Cancer Center. I received my doctorate
 								in Computational Statistics from the joint doctoral program at San Diego State University and Claremont Graduate University.
 								My dissertation work focused on designing and implementing multiple Random Forest-based algorithms to solve computational challenges
