--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
 						<!-- About -->
 							<article id="Publication">
 								<h2 class="major">Publication</h2>
-								<p> <a href="https://scholar.google.com/citations?user=vPAHC_wAAAAJ&hl=en"></a>. <p>
+								<p> <a href="https://scholar.google.com/citations?user=vPAHC_wAAAAJ&hl=en">Google Scholar Citation </a><p>
+									<li><a href="CV/CV-Afrooz Jahedi 10-20.pdf">CV</a></li>
 							
 
 						<!-- Contact -->
