--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 								in Computational Statistics from the joint doctoral program at San Diego State University and Claremont Graduate University.
 								My dissertation work focused on designing and implementing multiple Random Forest-based algorithms to solve computational challenges
 								in autism research. I also received my first Masters degree in Mathematical Statistics from Shiraz University in Iran and my second Masters in
-								Biostatistics from San Diego State University. My research interests include Machine Learning, Data Mining, and Spatial Analysis. Currently, I
+								Biostatistics from San Diego State University. <br>
+								My research interests include Machine Learning, Data Mining, and Spatial Analysis. Currently, I
 								am working on developing a spatial pipeline to analyze CODEX images on Glioblastoma.
 								<p>
 						
