--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                     Matching two groups on multiple confounding variables is one of the primary steps in conducting observational studies.
 									All existing matching algorithms can function only with a complete dataset, while none can function with missing data.
 									Datasets with these problems must impute or only complete cases can be considered in matching. Losing data because of
-									the limitations in a matching algorithm can decrease the power of the study as well as omit important information.
+									the limitations in a matching algorithm can decrease the power of the study as well as omit important information.<br>
 									In this project, we introduce the R package iterMatch that tackles these shortcomings. This package finds a one-to-one 
 									subsample of the data that is balanced on all matching variables while incorporating missing values in an iterative manner.
 									Random forest is used as a crucial tool to handle missing values when constructing a distance matrix to be fitted to an
@@ -114,7 +114,7 @@
 									
 								<u> Potential Subtyping Using Behavioral Measurements</u>
 							    <p><b>Can subtyping ASD participants based on behavioral and diagnostic measures reveal distinct resting state functional connectivity
-								(rs-fc) patterns?</b>
+								(rs-fc) patterns?</b><br>
                                     ASDs are characterized by great heterogeneity of symptoms, likely secondary to multiple etiological subtypes of ASDs. Few studies
 									have directly focused on imaging data with the goal of characterizing subtypes of ASDs, but in the study performed by Theo behavioral
 									and neuropsychological data are used with unsupervised machine learning to characterize potential subtypes of ASDs. We are
