--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<ul>
 								<li><a href="#intro">Introduction</a></li>
 								<li><a href="#Research"> Projects</a></li>
-								<li><a href="CV/CV-Afrooz Jahedi 10-20.pdf">CV</a></li>
+								<li><a href="CV/CV.pdf">CV</a></li>
 								<li><a href="#Publication">Publication</a></li>
 							</ul>
 						</nav>
